# memdrv

./: .gitignore  CMakeLists.txt
cmake/: FindWdk.cmake
include/: detour.hpp  kdef.hpp  stdint.hpp  util.hpp
src/: detour.cpp  main.cpp  util.cpp
